@@ -3183,7 +3183,7 @@ yu=(_y0+_y1)/2;
 
 if(t->flags & TR_ANALOG_FULLSCALE) /* otherwise use dynamic */
 	{
-	if(!t->minmax_valid)
+	if((!t->minmax_valid)||(t->d_num_ext != num_extension))
 		{
 		h3 = &t->n.nd->head;
 		for(;;)
@@ -3259,6 +3259,7 @@ if(t->flags & TR_ANALOG_FULLSCALE) /* otherwise use dynamic */
 		t->minmax_valid = 1;
 		t->d_minval = tmin;
 		t->d_maxval = tmax;
+		t->d_num_ext = num_extension;
 		}
 		else
 		{
@@ -3985,7 +3986,7 @@ yu=(_y0+_y1)/2;
 
 if(t->flags & TR_ANALOG_FULLSCALE) /* otherwise use dynamic */
         {
-        if(!t->minmax_valid)
+	if((!t->minmax_valid)||(t->d_num_ext != num_extension))
                 { 
                 h3 = t->n.vec->vectors[0];
                 for(;;)
@@ -4047,6 +4048,7 @@ if(t->flags & TR_ANALOG_FULLSCALE) /* otherwise use dynamic */
                 t->minmax_valid = 1;
                 t->d_minval = tmin;
                 t->d_maxval = tmax;
+		t->d_num_ext = num_extension;
                 }
                 else
                 {
